infrastructure/monitoring/ingress-routes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.wesl.io`)
      services:
        - name: kube-prometheus-stack-grafana
          port: http-web
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alert-manager
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`alertmanager.wesl.io`)
      middlewares:
        - name: forward-auth
          namespace: traefik
      services:
        - name: kube-prometheus-stack-alertmanager
          port: http-web
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.wesl.io`)
      middlewares:
        - name: forward-auth
          namespace: traefik
      services:
        - name: kube-prometheus-stack-prometheus
          port: http-web
